adding Giti brand to tires

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
         <item>Dunlop</item>
         <item>Falken</item>
         <item>Firestone</item>
+	<item>Giti</item>
         <item>Good Year</item>
         <item>Hankook</item>
         <item>Kumho</item>
